--- a/QITInterReg/QITInterReg.csproj
+++ b/QITInterReg/QITInterReg.csproj
@@ -153,6 +153,7 @@
       <DependentUpon>EntityModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Crypto.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
