--- a/QITInterReg/QITInterReg.csproj
+++ b/QITInterReg/QITInterReg.csproj
@@ -156,6 +156,12 @@
     </Compile>
     <Compile Include="Models\UserLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServicesImpl\AuthenticationServiceImpl.cs" />
+    <Compile Include="ServicesImpl\EmailServiceImpl.cs" />
+    <Compile Include="ServicesImpl\RegistrationServiceImpl.cs" />
+    <Compile Include="Services\AuthenticationService.cs" />
+    <Compile Include="Services\EmailService.cs" />
+    <Compile Include="Services\RegistrationService.cs" />
     <Compile Include="Utils\Crypto.cs" />
   </ItemGroup>
   <ItemGroup>
