--- a/QITInterReg/QITInterReg.csproj
+++ b/QITInterReg/QITInterReg.csproj
@@ -128,13 +128,20 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="DAOImpl\CustomerDAOImpl.cs" />
     <Compile Include="DAOImpl\UserDAOImpl.cs" />
+    <Compile Include="DAO\CustomerDAO.cs" />
     <Compile Include="DAO\UserDAO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Customer.cs">
+      <DependentUpon>EntityModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Dto\Customer.cs" />
     <Compile Include="Models\Dto\User.cs" />
     <Compile Include="Models\EntityModel.Context.cs">
       <AutoGen>True</AutoGen>
@@ -157,9 +164,11 @@
     <Compile Include="Models\UserLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicesImpl\AuthenticationServiceImpl.cs" />
+    <Compile Include="ServicesImpl\CustomerServiceImpl.cs" />
     <Compile Include="ServicesImpl\EmailServiceImpl.cs" />
     <Compile Include="ServicesImpl\RegistrationServiceImpl.cs" />
     <Compile Include="Services\AuthenticationService.cs" />
+    <Compile Include="Services\CustomerService.cs" />
     <Compile Include="Services\EmailService.cs" />
     <Compile Include="Services\RegistrationService.cs" />
     <Compile Include="Utils\Crypto.cs" />
@@ -220,6 +229,11 @@
     <Content Include="Views\User\Registration.cshtml" />
     <Content Include="Views\User\VerifyAccount.cshtml" />
     <Content Include="Views\User\Login.cshtml" />
+    <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Customer\Details.cshtml" />
+    <Content Include="Views\Customer\Create.cshtml" />
+    <Content Include="Views\Customer\Edit.cshtml" />
+    <Content Include="Views\Customer\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
